--- a/src/Catalyst.Node/Config/components.json
+++ b/src/Catalyst.Node/Config/components.json
@@ -10,6 +10,30 @@
             ]
         },
         {
+            "type": "Catalyst.Common.Repository.PeerRepository, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Repository.IPeerRepository, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Repository.AccountRepository, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Repository.IAccountRepository, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Repository.MempoolRepository, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Repository.IMempoolRepository, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Common.IO.EventLoop.EventLoopGroupFactoryConfiguration, Catalyst.Common",
             "services": [
                 {
