--- a/src/Catalyst.Node.UnitTests/Catalyst.Node.UnitTests.csproj
+++ b/src/Catalyst.Node.UnitTests/Catalyst.Node.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <Authors>James Kirby (nshcore@protonmail.com)</Authors>
@@ -10,6 +10,11 @@
         <RootNamespace>Catalyst.Node.UnitTests</RootNamespace>
     </PropertyGroup>
     <Import Project="../Common.UnitTests.props" />
+    <ItemGroup>
+      <Compile Remove="FileTransfer\**" />
+      <EmbeddedResource Remove="FileTransfer\**" />
+      <None Remove="FileTransfer\**" />
+    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Reactive.Testing" Version="4.1.5" />
         <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
@@ -24,8 +29,5 @@
         <ProjectReference Include="..\Catalyst.Common.UnitTests\Catalyst.Common.UnitTests.csproj" />
         <ProjectReference Include="..\Catalyst.Node\Catalyst.Node.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="FileTransfer\" />
     </ItemGroup>
 </Project>
