--- a/src/Catalyst.Modules.Lib.IntegrationTests/Catalyst.Modules.Lib.IntegrationTests.csproj
+++ b/src/Catalyst.Modules.Lib.IntegrationTests/Catalyst.Modules.Lib.IntegrationTests.csproj
@@ -13,7 +13,7 @@
     </PropertyGroup>
     <Import Project="../Common.IntegrationTests.props" />
     <ItemGroup>
-        <ProjectReference Include="..\Catalyst.Modules\Catalyst.Modules.Lib.csproj" />
+        <ProjectReference Include="..\Catalyst.Modules.Lib\Catalyst.Modules.Lib.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
     </ItemGroup>
 </Project>
