Update CosmosDb key

--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -36,7 +36,7 @@
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
         <PackageReference Include="SharpRepository.AzureDocumentDbRepository" Version="2.0.2-alpha4" />
         <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
-        <PackageReference Include="SharpRepository.XmlRepository" Version="1.5.0.3" />
+        <PackageReference Include="SharpRepository.XmlRepository" Version="2.0.1-alpha3" />
         <PackageReference Include="System.IO.Abstractions" Version="6.0.3" />
         <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="6.0.3" />
         <PackageReference Include="System.Memory" Version="4.5.3" />
