--- a/src/Catalyst.Node/Config/components.json
+++ b/src/Catalyst.Node/Config/components.json
@@ -278,12 +278,22 @@
             ]
         },
         {
+            "type": "Catalyst.Common.Registry.PasswordRegistry, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Registry.IPasswordRegistry, Catalyst.Common"
+                }
+            ],
+            "instanceScope": "singleinstance"
+        },
+        {
             "type": "Catalyst.Common.Cryptography.ConsolePasswordReader, Catalyst.Common",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.Cryptography.IPasswordReader, Catalyst.Common"
                 }
-            ]
+            ],
+            "instanceScope": "singleinstance"
         },
         // WHY USE CLI BASED CLASS AND NOT IN COMMON???
         {
