--- a/src/Catalyst.SeedNode/Catalyst.SeedNode.csproj
+++ b/src/Catalyst.SeedNode/Catalyst.SeedNode.csproj
@@ -28,6 +28,7 @@
         <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
         <PackageReference Include="AutofacSerilogIntegration" Version="2.0.0" />
+        <PackageReference Include="CommandLineParser" Version="2.5.0" />
         <PackageReference Include="Common.Logging.Serilog" Version="4.3.6" />
         <PackageReference Include="Ipfs.Engine" Version="0.11.0" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
