--- a/src/Catalyst.Node.Rpc.Client.UnitTests/Catalyst.Node.Rpc.Client.UnitTests.csproj
+++ b/src/Catalyst.Node.Rpc.Client.UnitTests/Catalyst.Node.Rpc.Client.UnitTests.csproj
@@ -17,5 +17,8 @@
     <ItemGroup>
       <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="IO\Observers\" />
+    </ItemGroup>
     <Import Project="../Common.UnitTests.props" />
 </Project>
