--- a/src/Catalyst.Cli.UnitTests/Catalyst.Cli.UnitTests.csproj
+++ b/src/Catalyst.Cli.UnitTests/Catalyst.Cli.UnitTests.csproj
@@ -15,10 +15,17 @@
     </PropertyGroup>
     <Import Project="../Common.UnitTests.props" />
     <ItemGroup>
+      <Compile Remove="Response\VerifyMessageResponseTests.cs" />
+    </ItemGroup>
+    <ItemGroup>
         <ProjectReference Include="..\Catalyst.Cli\Catalyst.Cli.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
     </ItemGroup>
     <ItemGroup>
+      <PackageReference Include="Microsoft.Reactive.Testing" Version="4.1.5" />
       <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Request\" />
     </ItemGroup>
 </Project>
