--- a/src/Catalyst.Modules.Lib.IntegrationTests/Catalyst.Modules.Lib.IntegrationTests.csproj
+++ b/src/Catalyst.Modules.Lib.IntegrationTests/Catalyst.Modules.Lib.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <SignAssembly>true</SignAssembly>
@@ -13,6 +13,7 @@
     </PropertyGroup>
     <Import Project="../Common.IntegrationTests.props" />
     <ItemGroup>
+        <ProjectReference Include="..\Catalyst.Core.Lib.IntegrationTests\Catalyst.Core.Lib.IntegrationTests.csproj" />
         <ProjectReference Include="..\Catalyst.Modules.Lib\Catalyst.Modules.Lib.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
     </ItemGroup>
