--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -10,6 +10,9 @@
     </PropertyGroup>
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
+        <PackageReference Include="Autofac" Version="4.8.1" />
+        <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
+        <PackageReference Include="AutofacSerilogIntegration" Version="1.0.12" />
         <PackageReference Include="Catalyst.Cryptography.BulletProofs.Wrapper" Version="0.0.1.7468-beta" />
         <PackageReference Include="Catalyst.Protocol" Version="0.0.1.8848-beta" />
         <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0" />
@@ -19,6 +22,7 @@
         <PackageReference Include="Ipfs.HttpGateway" Version="0.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
         <PackageReference Include="Multiformats.Hash" Version="1.5.0" />
         <PackageReference Include="NBuilder" Version="6.0.0" />
         <PackageReference Include="Nethereum.KeyStore" Version="3.3.0" />
@@ -32,10 +36,12 @@
         <PackageReference Include="Serilog" Version="2.8.0" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.4" />
         <PackageReference Include="libsodium" Version="[1.0.17]" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
         <PackageReference Include="SharpRepository.AzureDocumentDbRepository" Version="2.0.2-alpha4" />
         <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
+        <PackageReference Include="SharpRepository.Ioc.Autofac" Version="2.0.4.2" />
         <PackageReference Include="SharpRepository.XmlRepository" Version="2.0.1-alpha3" />
         <PackageReference Include="System.IO.Abstractions" Version="6.0.3" />
         <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="6.0.3" />
