Using standard components file for storing datafolder location.

--- a/src/Catalyst.Node/Config/components.json
+++ b/src/Catalyst.Node/Config/components.json
@@ -286,7 +286,7 @@
                 }
             ],
             "parameters": {
-                "checkConfigPointer": true
+                "configDataDir": "C:\\Users\\Dennis\\.Catalyst"
             }
         },
         {
