Replace ImportKey methods with KeyFromBytes methods. Replace code that creates instances of PublicKey, PrivateKey, Signature.

--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -238,7 +238,7 @@
             "type": "Catalyst.Cryptography.BulletProofs.Wrapper.CryptoWrapper, Catalyst.Cryptography.BulletProofs.Wrapper",
             "services": [
                 {
-                    "type": "Catalyst.Cryptography.BulletProofs.Wrapper.IWrapper, Catalyst.Cryptography.BulletProofs.Wrapper"
+                    "type": "Catalyst.Cryptography.BulletProofs.Wrapper.Interfaces.IWrapper, Catalyst.Cryptography.BulletProofs.Wrapper"
                 }
             ]
         },
