--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -63,6 +63,7 @@
         </None>
     </ItemGroup>
     <ItemGroup>
+        <Folder Include="Interfaces\Cli\Commands\" />
         <Folder Include="Interfaces\P2P\Messaging\Dto" />
     </ItemGroup>
     <ItemGroup>
