--- a/src/Catalyst.Node/Catalyst.Node.csproj
+++ b/src/Catalyst.Node/Catalyst.Node.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="Ipfs.Core" Version="0.52.1" />
         <PackageReference Include="Ipfs.Engine" Version="0.11.1" />
         <PackageReference Include="Ipfs.HttpGateway" Version="0.3.0" />
+        <PackageReference Include="CommandLineParser" Version="2.5.0" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
