Testing the find replace feature for linux

--- a/src/Catalyst.Node/Config/components.json
+++ b/src/Catalyst.Node/Config/components.json
@@ -328,7 +328,7 @@
                 }
             ],
             "parameters": {
-                "configDataDir": "C:\\Users\\Dennis\\.Catalyst"
+                "configDataDir": "C://Users//.Catalyst"
             }
         },
         {
