Testing linux issue, does the find and replace work for this

--- a/src/Catalyst.Node/Config/components.json
+++ b/src/Catalyst.Node/Config/components.json
@@ -328,7 +328,7 @@
                 }
             ],
             "parameters": {
-                "configDataDir": "C://Users//.Catalyst"
+                "configDataDir": "LINUX_REPLACE_ME"
             }
         },
         {
