--- a/src/Catalyst.Node/Config/components.json
+++ b/src/Catalyst.Node/Config/components.json
@@ -328,7 +328,7 @@
                 }
             ],
             "parameters": {
-                "configDataDir": "REPLACE_ME"
+                "configDataDir": "Data_Directory"
             }
         },
         {
