json object usage

--- a/src/Catalyst.Node/Config/components.json
+++ b/src/Catalyst.Node/Config/components.json
@@ -328,7 +328,7 @@
                 }
             ],
             "parameters": {
-                "configDataDir": "Data_Directory"
+                "configDataDir": "Data_Dict"
             }
         },
         {
