enabled all test

--- a/src/Catalyst.Node/Config/components.json
+++ b/src/Catalyst.Node/Config/components.json
@@ -329,7 +329,7 @@
                 }
             ],
             "parameters": {
-                "configDataDir": "Data_Dict"
+                "configDataDir": "C:\\Data_Directory"
             }
         },
         {
